# oh-my-todo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/application/: app_state_service.rs  bootstrap.rs  commands.rs  error.rs  maintenance_service.rs  mod.rs  queries.rs  service.rs  space_service.rs  task_query.rs  task_service.rs
src/cli/: handlers.rs  mod.rs  output.rs  parser.rs
src/domain/: ids.rs  mod.rs  model.rs  refs.rs  validation.rs
src/storage/: atomic.rs  mod.rs  paths.rs  repository.rs  serializer.rs
src/tui/: app.rs  input.rs  mod.rs  render.rs
tests/: application_stage2.rs  application_stage3.rs  application_stage5.rs  bootstrap.rs  cli_stage2.rs  cli_stage3.rs  ids.rs  roundtrip.rs
