[package]
name = "oh-my-todo"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde", "formatting", "parsing"] }
ulid = "1.2.1"

[dev-dependencies]
tempfile = "3.27.0"
