[package]
name = "oh-my-todo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Local-first terminal task manager with a mouse-first TUI and CLI."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheFlowCrash/oh-my-todo"
homepage = "https://github.com/TheFlowCrash/oh-my-todo"
documentation = "https://docs.rs/oh-my-todo"
keywords = ["todo", "tui", "cli", "tasks", "productivity"]
categories = ["command-line-utilities"]
default-run = "todo"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.0"
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde", "formatting", "parsing"] }
tui-textarea = { package = "tui-textarea-2", version = "0.10.2", default-features = false, features = ["crossterm"] }
ulid = "1.2.1"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
tempfile = "3.27.0"
